--- a/styles/mods.css
+++ b/styles/mods.css
@@ -36,12 +36,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25em;
+    width: 30em;
     background-color: var(--primary);
     padding: 10px;
     border-radius: .5em;
     box-shadow: 0 10px 0px #000;
-    transition: box-shadow .5s ease, transform .4s ease, background-color .5s;
+    transition: box-shadow .5s ease, transform .4s ease, background-color .5s, width .3s;
 }
 
 .releases-info:hover {
@@ -152,4 +152,16 @@ li {
 
 #repo h1 {
     text-align: center;
+}
+
+@media screen and (max-width: 885px) {
+    .release-container {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .releases-info {
+        width: 28em;
+    }
 }
