--- a/styles/mods.css
+++ b/styles/mods.css
@@ -8,6 +8,12 @@
     --gray: #6c6c6c;
 }
 
+.outlined {
+    outline: 3px solid #e18830;
+    transition: outline .3s ease;
+    margin: 4px;
+}
+
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
