--- a/styles/index.css
+++ b/styles/index.css
@@ -174,6 +174,7 @@ body {
 
 #nameInput {
     color: white;
+    font-family: 'Quicksand';
     font-size: 50px;
     padding: 0 0 0 30px;
     margin: 0;
@@ -182,7 +183,7 @@ body {
     opacity: 1;
     border: 2px solid #ffffff;
     border-radius: .3em;
-    transition: border .4s, width 1s ease, opacity 2s;
+    transition: border .4s, width .8s ease, opacity 2s;
 }
 
 #nameInput:focus {
@@ -198,13 +199,47 @@ body {
 }
 
 .typing {
-    display: inline-block;
-    border-right: 2px solid #eaeaea;
-    height: 30%;
+    display: flex;
+    position: relative;
+    background: linear-gradient(to left, #ee9d2c, #ffe016);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.typing::after {
+    content: '';
+    align-self: center;
+    position: absolute;
+    top: 0;
+    right: -5px;
+    bottom: 0;
+    height: .9em;
+    margin-left: 2px;
+    border-right: 2px #eaeaea solid;
     animation: blink 0.8s steps(1) infinite;
 }
 
 @keyframes blink {
     0%, 100% { border-color: transparent; }
     50% { border-color: #eaeaea; }
+}
+
+@media screen and (max-width: 715px) {
+    h1 {
+        width: auto;
+        line-break: auto;
+        flex-direction: column;
+        font-size: 3em;
+        text-align: center;
+    }
+
+    #nameInput {
+        font-size: 30px;
+        height: 3em;
+        width: 6em;
+    }
+
+    .typing::after {
+        display: none;
+    }
 }
