--- a/styles/statify.css
+++ b/styles/statify.css
@@ -1,44 +1,497 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 :root {
-    --primary: #3d3d3d;
-    --secondary: #1e1e1e;
-    --tertiary: #5c5c5c;
-    --hover: #6777fe;
-    --gray: #6c6c6c;
+    --background: #232323;
+    --secondary: #f3af31;
+    --primary: #2690ec;
+    --orange: #f38632;
+    --hover: #124674;
+    --gray: #2c2f34;
 }
 
 body {
+    background-color: var(--background);
+    font-family: "Quicksand";
+    transition: padding .2s;
     box-sizing: border-box;
+    flex-direction: column;
+    padding: 1em 7vw;
+    color: white;
+    display: flex;
+    margin: 0;
+    gap: 1em;
+}
+
+.main-container {
+    background-color: var(--gray);
+    flex-direction: column;
+    border-radius: .4em;
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.navigation > ul {
+    list-style-type: none;
+    font-size: 1.3em;
+    display: flex;
     padding: 0;
     margin: 0;
-    color: white;
-    font-family: "Quicksand";
-    background-color: var(--secondary);
 }
 
-.container {
-    margin: 20px 0px;
-}
-
-.embed-container {
+.navbar {
+    -webkit-user-select: none;
+    justify-content: center;
+    -moz-user-select: none;
+    filter: drop-shadow(0px 3px 4px black);
+    user-select: none;
+    position: sticky;
     display: flex;
+    z-index: 100;
+    width: 100%;
+    top: 1em;
+}
+
+.navigation {
+    background-color: var(--primary);
+    justify-content: center;
+    border-radius: .5em;
+    display: flex;
+}
+
+.navigation > ul > li {
+    transition: background-color .2s;
+    border-radius: .5em;
+    padding: 1.2em 2em;
+    cursor: pointer;
+}
+
+.navigation > ul > li:hover {
+    background-color: var(--hover);
+}
+
+.navigation > ul > li:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.navigation > ul > li:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.navigation > ul > li:last-child:hover {
+    background-color: var(--hover);
+}
+
+.navigation > ul > li:not(:last-child):not(:first-child) {
+    border-radius: 0;
+}
+
+.header {
+    -webkit-user-select: none;
+    justify-content: center;
+    -moz-user-select: none;
     flex-direction: column;
     align-items: center;
-    justify-self: center;
-    row-gap: 30px;
-}
-
-.wheel {
-    font-size: 10px;
-    background-color: var(--tertiary);
-    border-radius: 20px;
-}
-
-.work-in-progress {
+    position: relative;
     user-select: none;
-    position: fixed;
-    font-size: 15em;
-    transform: rotate(-30deg) translateY(300px);
-    color: rgba(40, 40, 40, 0.6);
+    display: flex;
+}
+
+.img-container {
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    border-radius: .5em;
+    overflow: hidden;
+    display: flex;
+    height: 90dvh;
+    width: 100%;
+}
+
+.img-container > img {
+    filter: blur(10px);
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.img-container::after {
+    backdrop-filter: contrast(110%) brightness(75%) opacity(60%);
+    border-radius: .4em;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    content: '';
+    right: 0;
+    top: 0;
+}
+
+.title {
+    filter: drop-shadow(3px 3px 3px black);
+    font-size: clamp(2rem, 10vw, 10em);
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+}
+
+.title .description {
+    word-break: keep-all;
+    word-wrap: normal;
+    font-size: 2rem;
+}
+
+.main {
+    height: max-content;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.menu-icon {
+    background-color: var(--primary);
+    justify-content: center;
+    align-items: center;
+    border-radius: .4em;
+    position: relative;
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
+
+.navigation.open {
+    position: absolute;
+    display: flex;
+    left: 5.5em;
+}
+
+.navigation.open > ul {
+    flex-direction: column;
+}
+
+.navigation.open > ul > li {
+    transition: background-color .2s;
+    border-radius: .4em;
+    padding: 1.2em 2em;
+    cursor: pointer;
+}
+
+
+.navigation.open > ul > li:hover {
+    background-color: var(--hover);
+}
+
+.navigation.open > ul > li:last-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
+
+.navigation.open > ul > li:first-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.navigation.open > ul > li:last-child:hover {
+    background-color: var(--hover);
+}
+
+.navigation.open > ul > li:not(:last-child):not(:first-child) {
+    border-radius: 0;
+}
+
+.mobile {
+    content: url("/styles/menu-icon-new.svg");
+    margin: 0 10px;
+    height: 2.7em;
+    padding: 10px;
+    width: 3em;
+}
+
+.introduction-container {
+    flex-direction: row;
+    display: flex;
+    padding: 10px;
+    gap: 3em;
+    margin: 2em;
+}
+
+.introduction-description {
+    font-size: clamp(1.3em, 2vw, 2em);
+    margin-top: .5em;
+    flex: 1;
+}
+
+.introduction-title {
+    background: linear-gradient(to right, var(--secondary), var(--orange));
+    align-self: baseline;
+    color: var(--background);
+    margin: 20px;
+    border-radius: .3em;
+    position: absolute;
+    width: max-content;
+    line-height: .2em;
+    font-size: clamp(1em, 2vw, 1.5em);
+    padding: .5em;
+    bottom: -2em;
+}
+
+@media screen and (max-width: 1350px) {
+    .compatibility-title::before {
+        display: none;
+        width: 0;
+    }
+    
+    .compatibility-title::after {
+        display: none;
+        width: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        padding: 1em 0;
+    }
+
+    .navbar {
+        justify-content: start;
+    }
+
+    .description {
+        margin: 0 20px;
+    }
+}
+
+@media screen and (max-width: 1685px) {
+    .introduction-container {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 410px) {
+    .mobile {
+        height: 1.2em;
+        width: auto;
+        aspect-ratio: 1/1;
+    }
+
+    .navigation.open {
+        font-size: .625em;
+    }
+}
+
+.slider-wrapper {
+	position: relative;
+    max-width: clamp(49em, 2vw, 20em);
+    background: var(--gray);
+    border: solid 3px transparent;
+    border-radius: .5rem;
+    border: 3px solid var(--orange);
+}
+
+.slider {
+	display: flex;
+	aspect-ratio: 16 / 9;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    padding: 5px;
+	border-radius: 0.5rem;
+	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
+	scrollbar-width: none; /* Hide scrollbar Firefox */
+    z-index: 0;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.slider::-webkit-scrollbar {
+	display: none;
+}
+
+.slider img {
+	flex: 1 0 100%;
+	scroll-snap-align: start;
+	object-fit: cover;
+}
+
+.slider-nav {
+	display: flex;
+	column-gap: 1rem;
+	position: absolute;
+	bottom: 1.25rem;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 1;
+}
+
+.slider-nav a {
+	width: 0.5rem;
+	height: 0.5rem;
+	border-radius: 50%;
+	background-color: #fff;
+	opacity: 0.75;
+	transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+	opacity: 1;
+}
+
+.compatibility-container {
+    flex-direction: column;
+    display: flex;
+    padding: 10px clamp(1em, 2vw, 15em);
+    gap: 1em;
+    margin: 2em;
+    margin-top: 0;
+}
+
+.compatibility-title {
+    background: linear-gradient(to bottom, var(--orange), var(--secondary));
+    color: var(--background);
+    margin: 20px;
+    border-radius: .3em;
+    position: relative;
+    line-height: .2em;
+    width: max-content;
+    font-size: clamp(.6em, 2dvw, 1.7em);
+    padding: .5em;
+    align-self: center;
+}
+
+.compatibility-title > h2 {
+    padding: 0;
+    margin: 10px;
+}
+
+.compatibility-description {
+    display: flex;
+    flex-direction: column;
+    font-size: clamp(1.3em, 2vw, 1.7em);
+    width: fit-content;
+    flex: 1;
+}
+
+.compatibility-title::before {
+    content: '';
+    position: absolute;
+    width: 70%;
+    left: 50%;
+    top: 0;
+    border-radius: .5em;
+    border: 3px solid var(--orange);
+}
+
+.compatibility-title::after {
+    content: '';
+    position: absolute;
+    width: 70%;
+    right: 50%;
+    top: 0;
+    border-radius: .5em;
+    border: 3px solid var(--orange);
+}
+
+.excel-table {
+    display: table; /* Use table display for Excel-like behavior */
+    border: 1px solid #2c2c2c;
+    border-spacing: 0;
+    border-radius: .4em;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    background-color: #1e1e1e;
+    table-layout: auto; /* Default table layout for content-based column width */
+}
+
+.header-row, .row {
+    display: table-row; /* Use table-row for proper row behavior */
+}
+
+.cell {
+    display: table-cell; /* Use table-cell for proper column resizing */
+    border: 1px solid #2c2c2c;
+    padding: 16px;
+    min-width: 80px; /* Minimum width for the cell */
+    text-align: center;
+    font-size: clamp(.25em, 2vw, 0.875em);
+    box-sizing: border-box;
+    color: #e0e0e0;
+    white-space: nowrap; /* Prevent text from wrapping to the next line */
+    overflow: hidden; /* Hide overflow content if necessary */
+}
+
+.cell-header {
+    background-color: #333333;
+    min-width: clamp(35px, 2vw, 70px);
+    font-weight: bold;
+    width: min-content;
+    color: #e0e0e0;
+}
+
+.corner {
+    background-color: #444444;
+}
+
+.row .header {
+    background-color: #333333;
+    font-weight: normal;
+    color: #a0a0a0;
+}
+
+.cell:nth-child(even) {
+    background-color: #2a2a2a;
+}
+
+.cell:nth-child(odd) {
+    background-color: #252525;
+}
+
+.cell:hover {
+    background-color: #444444;
+}
+
+@media screen and (max-width: 525px) {
+    .excel-table {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+}
+
+codelink {
+    background-color: var(--orange);
+    color: var(--background);
+    padding: .25em;
+    border-radius: .3em;
+    cursor: pointer;
+    text-decoration: underline;
+    transition: background .3s;
+}
+
+code {
+    background-color: var(--background);
+    padding: .25em;
+    border-radius: .3em;
+    cursor: pointer;
+}
+
+.tooltip {
+    position: absolute;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    font-size: 14px;
+    border-radius: 4px;
+    pointer-events: none; /* Make sure the tooltip doesn't interfere with cursor events */
+    display: none; /* Initially hidden */
+    z-index: 1000;
+    white-space: nowrap;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.excel-table:last-child {
+    width: 25%;
+    align-self: center;
 }
