--- a/styles/statify.css
+++ b/styles/statify.css
@@ -1,12 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
+    --gray-but-more-blue: #313945;
+    --hover-font: #c2c2c2;
     --background: #232323;
+    --light-blue: #0393d6;
     --secondary: #f3af31;
+    --cozy-gray: #32333d;
     --primary: #2690ec;
     --orange: #f38632;
     --hover: #124674;
-    --gray: #2c2f34;
+    --gray: #2c2d34;
+}
+
+.cookie-popup {
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, 0.6);
+    transform: translate(-50%);
+    backdrop-filter: blur(4px);
+    flex-direction: column;
+    transition: width .5s;
+    align-items: center;
+    border-radius: .5em;
+    text-align: center;
+    position: fixed;
+    bottom: 2em;
+    left: 50%;
+    width: 25vw;
+    color: #fff;
+    padding: 15px;
+    z-index: 1000;
+    display: none;
+}
+
+@media screen and (max-width: 750px) {
+    .cookie-popup {
+        width: 50vw;
+    }
+}
+
+.cookie-popup button {
+    background-color: #ffad3b;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-left: 15px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #333;
+    border: none;
+    width: 50%;
+}
+
+.cookie-popup button:hover {
+    background-color: #ff9200;
 }
 
 body {
@@ -40,10 +87,10 @@ body {
 }
 
 .navbar {
+    filter: drop-shadow(0px 3px 4px black);
     -webkit-user-select: none;
     justify-content: center;
     -moz-user-select: none;
-    filter: drop-shadow(0px 3px 4px black);
     user-select: none;
     position: sticky;
     display: flex;
@@ -55,7 +102,7 @@ body {
 .navigation {
     background-color: var(--primary);
     justify-content: center;
-    border-radius: .5em;
+    border-radius: .65em;
     display: flex;
 }
 
@@ -68,14 +115,17 @@ body {
 
 .navigation > ul > li:hover {
     background-color: var(--hover);
+    border-radius: .5em;
 }
 
 .navigation > ul > li:last-child {
+    border-radius: .5em;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
 
 .navigation > ul > li:first-child {
+    border-radius: .5em;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -129,18 +179,51 @@ body {
 }
 
 .title {
-    filter: drop-shadow(3px 3px 3px black);
-    font-size: clamp(2rem, 10vw, 10em);
+    font-family: "Saira", sans-serif;
     position: absolute;
     text-align: center;
     width: 100%;
     z-index: 1;
 }
 
-.title .description {
+.title > h1 {
+    filter: drop-shadow(3px 3px 3px black);
+    font-size: clamp(4rem, 10vw, 10rem);
+    font-family: "Saira", sans-serif;
+    text-align: center;
+    line-height: 12rem;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.title > .description {
+    filter: drop-shadow(3px 3px 3px black);
+    font-family: "Quicksand", sans-serif;
     word-break: keep-all;
     word-wrap: normal;
     font-size: 2rem;
+}
+
+.title > .install {
+    transition: outline .2s, background .2s, color .3s, font-size .3s;
+    background-color: var(--primary);
+    font-family: "Saira", sans-serif;
+    padding: .9em 1.875em;
+    justify-self: center;
+    border-radius: .4em;
+    margin: 1.25em auto;
+    width: max-content;
+    align-self: center;
+    font-size: 26px;
+}
+
+.title > .install:hover {
+    font-family: "Saira", sans-serif;
+    background-color: var(--hover);
+    color: var(--hover-font);
+    font-size: 28px;
+    cursor: pointer;
 }
 
 .main {
@@ -217,16 +300,59 @@ body {
     padding: 10px;
     gap: 3em;
     margin: 2em;
+    margin-bottom: 3em;
 }
 
 .introduction-description {
     font-size: clamp(1.3em, 2vw, 2em);
     margin-top: .5em;
+    display: flex;
+    gap: 1em;
     flex: 1;
+}
+
+.introduction-description > p {
+    max-width: 30em;
+    position: relative;
+    text-align: justify;
+}
+
+.introduction-description > p:first-child {
+    width: 50%;
+}
+
+
+.introduction-description > p:last-child {
+    align-self: end;
+    width: 50%;
+}
+
+
+.introduction-description > p::after {
+    background-color: var(--light-blue);
+    border-radius: .5em;
+    position: absolute;
+    right: -30px;
+    content: '';
+    height: 4px;
+    width: 35px;
+    top: -10px;
+}
+
+.introduction-description > p::before {
+    background-color: var(--light-blue);
+    border-radius: .5em;
+    position: absolute;
+    height: 35px;
+    right: -20px;
+    content: '';
+    width: 4px;
+    top: -20px;
 }
 
 .introduction-title {
     background: linear-gradient(to right, var(--secondary), var(--orange));
+    font-size: clamp(1em, 2vw, 1.5em);
     align-self: baseline;
     color: var(--background);
     margin: 20px;
@@ -234,21 +360,8 @@ body {
     position: absolute;
     width: max-content;
     line-height: .2em;
-    font-size: clamp(1em, 2vw, 1.5em);
     padding: .5em;
     bottom: -2em;
-}
-
-@media screen and (max-width: 1350px) {
-    .compatibility-title::before {
-        display: none;
-        width: 0;
-    }
-    
-    .compatibility-title::after {
-        display: none;
-        width: 0;
-    }
 }
 
 @media screen and (max-width: 600px) {
@@ -265,9 +378,31 @@ body {
     }
 }
 
-@media screen and (max-width: 1685px) {
+@media screen and (max-width: 710px) {
+    .introduction-description {
+        flex-direction: column;
+        gap: .5em;
+    }
+
+    .introduction-description > p:last-child {
+        align-self: auto;
+        width: 100%;
+    }
+
+    .introduction-description > p:first-child {
+        width: 100%;
+    }
+    
+}
+
+@media screen and (max-width: 2100px) {
     .introduction-container {
         flex-direction: column;
+    }
+
+    .version-req {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -284,55 +419,46 @@ body {
 }
 
 .slider-wrapper {
-	position: relative;
-    max-width: clamp(49em, 2vw, 20em);
-    background: var(--gray);
+    max-width: clamp(50em, 2vw, 20em);
     border: solid 3px transparent;
+    background: var(--gray);
     border-radius: .5rem;
-    border: 3px solid var(--orange);
+	position: relative;
+    text-align: end;
 }
 
 .slider {
-	display: flex;
+	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border: 3px solid var(--orange);
+	scroll-snap-type: x mandatory;
+	-ms-overflow-style: none; 
+	scroll-behavior: smooth;
+	border-radius: 0.5rem;
+	scrollbar-width: none; 
 	aspect-ratio: 16 / 9;
 	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+	display: flex;
     padding: 5px;
-	border-radius: 0.5rem;
-	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
-	scrollbar-width: none; /* Hide scrollbar Firefox */
     z-index: 0;
 }
-/* Hide scrollbar for Chrome, Safari and Opera */
+
 .slider::-webkit-scrollbar {
 	display: none;
 }
 
 .slider img {
-	flex: 1 0 100%;
 	scroll-snap-align: start;
+	flex: 1 0 100%;
 	object-fit: cover;
 }
 
-.slider-nav {
-	display: flex;
-	column-gap: 1rem;
-	position: absolute;
-	bottom: 1.25rem;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
-}
-
 .slider-nav a {
-	width: 0.5rem;
-	height: 0.5rem;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.75;
 	transition: opacity ease 250ms;
+	background-color: #fff;
+	border-radius: 50%;
+	height: 0.5rem;
+	width: 0.5rem;
+	opacity: 0.75;
 }
 
 .slider-nav a:hover {
@@ -340,25 +466,29 @@ body {
 }
 
 .compatibility-container {
+    background-color: var(--gray-but-more-blue);
+    padding: 2em clamp(1em, 2vw, 15em);
     flex-direction: column;
-    display: flex;
-    padding: 10px clamp(1em, 2vw, 15em);
-    gap: 1em;
-    margin: 2em;
+    border-radius: .4em;
+    position: relative;
     margin-top: 0;
+    display: flex;
+    z-index: 2;
+    gap: 1em;
 }
 
 .compatibility-title {
     background: linear-gradient(to bottom, var(--orange), var(--secondary));
+    font-size: clamp(.7em, 2dvw, 1.7em);
     color: var(--background);
-    margin: 20px;
     border-radius: .3em;
     position: relative;
-    line-height: .2em;
     width: max-content;
-    font-size: clamp(.6em, 2dvw, 1.7em);
-    padding: .5em;
     align-self: center;
+    position: absolute;
+    line-height: .2em;
+    padding: .5em;
+    top: -1.20em;
 }
 
 .compatibility-title > h2 {
@@ -367,66 +497,53 @@ body {
 }
 
 .compatibility-description {
-    display: flex;
-    flex-direction: column;
     font-size: clamp(1.3em, 2vw, 1.7em);
+    flex-direction: column;
+    margin-bottom: 2em;
     width: fit-content;
+    display: flex;
     flex: 1;
 }
 
-.compatibility-title::before {
-    content: '';
-    position: absolute;
-    width: 70%;
-    left: 50%;
-    top: 0;
-    border-radius: .5em;
-    border: 3px solid var(--orange);
-}
-
-.compatibility-title::after {
-    content: '';
-    position: absolute;
-    width: 70%;
-    right: 50%;
-    top: 0;
-    border-radius: .5em;
-    border: 3px solid var(--orange);
+.intro-table {
+    justify-content: center;
+    align-self: center;
+    display: flex;
 }
 
 .excel-table {
-    display: table; /* Use table display for Excel-like behavior */
-    border: 1px solid #2c2c2c;
-    border-spacing: 0;
-    border-radius: .4em;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
+    border: 1px solid #2c2c2c;
     background-color: #1e1e1e;
-    table-layout: auto; /* Default table layout for content-based column width */
+    border-radius: .4em;
+    table-layout: auto; 
+    border-spacing: 0;
+    overflow: hidden;
+    display: table; 
 }
 
 .header-row, .row {
-    display: table-row; /* Use table-row for proper row behavior */
+    display: table-row; 
 }
 
 .cell {
-    display: table-cell; /* Use table-cell for proper column resizing */
+    font-size: clamp(.6em, 2vw, 0.875em);
     border: 1px solid #2c2c2c;
-    padding: 16px;
-    min-width: 80px; /* Minimum width for the cell */
-    text-align: center;
-    font-size: clamp(.25em, 2vw, 0.875em);
     box-sizing: border-box;
+    display: table-cell;
+    white-space: nowrap; 
+    text-align: center;
     color: #e0e0e0;
-    white-space: nowrap; /* Prevent text from wrapping to the next line */
-    overflow: hidden; /* Hide overflow content if necessary */
+    overflow: hidden;
+    min-width: 80px; 
+    padding: 16px;
 }
 
 .cell-header {
-    background-color: #333333;
     min-width: clamp(35px, 2vw, 70px);
-    font-weight: bold;
+    background-color: #333333;
     width: min-content;
+    font-weight: bold;
     color: #e0e0e0;
 }
 
@@ -453,7 +570,7 @@ body {
 }
 
 @media screen and (max-width: 525px) {
-    .excel-table {
+    .intro-table {
         width: 0;
         height: 0;
         display: none;
@@ -462,36 +579,75 @@ body {
 
 codelink {
     background-color: var(--orange);
-    color: var(--background);
-    padding: .25em;
-    border-radius: .3em;
-    cursor: pointer;
     text-decoration: underline;
     transition: background .3s;
+    color: var(--background);
+    white-space: nowrap;
+    border-radius: .3em;
+    cursor: pointer;
+    padding: .25em;
 }
 
 code {
     background-color: var(--background);
-    padding: .25em;
     border-radius: .3em;
     cursor: pointer;
+    padding: .25em;
 }
 
 .tooltip {
-    position: absolute;
-    padding: 5px 10px;
-    background: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    font-size: 14px;
-    border-radius: 4px;
-    pointer-events: none; /* Make sure the tooltip doesn't interfere with cursor events */
-    display: none; /* Initially hidden */
-    z-index: 1000;
-    white-space: nowrap;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.8);
+    pointer-events: none; 
+    white-space: nowrap;
+    position: absolute;
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #fff;
+    display: none;
+    z-index: 1000;
 }
 
 .excel-table:last-child {
     width: 25%;
+}
+
+.version-req {
+    display: flex;
+    gap: 2em;
+}
+
+.download-container {
+    padding: 2em clamp(1em, 2vw, 15em);
+    transform: translate(0, -10px);
+    flex-direction: column;
+    border-radius: .4em;
+    margin-bottom: 1em;
+    position: relative;
+    margin-top: 0;
+    display: flex;
+    z-index: 1;
+    gap: 1em;
+}
+
+.download-title {
+    background: linear-gradient(to bottom, var(--orange), var(--secondary));
+    font-size: clamp(.7em, 2dvw, 1.7em);
+    color: var(--background);
+    border-radius: .3em;
+    width: max-content;
+    position: absolute;
     align-self: center;
+    line-height: .2em;
+    bottom: -2.5em;
+    padding: .5em;
+    margin: 20px;
+    left: 0;
+}
+
+.download-description {
+    font-size: clamp(1.3em, 2vw, 2em);
+    line-height: clamp(2em, 2vw, 5em);
+    margin-top: 2em;
 }
