--- a/styles/statify.css
+++ b/styles/statify.css
@@ -605,6 +605,7 @@ code {
 .tooltip {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     background: rgba(0, 0, 0, 0.8);
+    font-family: "Quicksand", serif;
     pointer-events: none; 
     white-space: nowrap;
     position: absolute;
