--- a/styles/statify.css
+++ b/styles/statify.css
@@ -708,3 +708,55 @@ code {
     width: .3em;
 }
 
+.help-container {
+    background-color: var(--gray-but-more-blue);
+    padding: 2em clamp(1em, 2vw, 15em);
+    flex-direction: column;
+    border-radius: .4em;
+    position: relative;
+    margin-top: 0;
+    display: flex;
+    z-index: 2;
+    gap: 1em;
+}
+
+.help-title {
+    background: linear-gradient(to bottom, var(--orange), var(--secondary));
+    font-size: clamp(.7em, 2dvw, 1.7em);
+    color: var(--background);
+    border-radius: .3em;
+    position: relative;
+    width: max-content;
+    align-self: start;
+    position: absolute;
+    line-height: .2em;
+    padding: .5em;
+    top: -1.20em;
+    right: 0;
+    margin: 0 20px;
+}
+
+.help-title > h2 {
+    padding: 0;
+}
+
+.help-description {
+    font-size: clamp(1.3em, 2vw, 1.7em);
+    flex-direction: column;
+    margin-bottom: 2em;
+    width: fit-content;
+    display: flex;
+    flex: 1;
+}
+
+.help-description > h3:first-child {
+    padding: 0;
+    margin: 0;
+    margin-top: 2em;
+    line-height: 10px;
+}
+
+.help-description > ul{
+    padding-left: 2em;
+    margin: 0;
+}
