Added donation option and creators to footer

--- a/styles/statify.css
+++ b/styles/statify.css
@@ -125,6 +125,7 @@ body {
     border-radius: .5em;
 }
 
+
 .navigation > ul > li:last-child {
     border-radius: .5em;
     border-top-left-radius: 0;
@@ -385,6 +386,7 @@ body {
         margin: 0 20px;
     }
 }
+
 
 @media screen and (max-width: 710px) {
     .introduction-description {
@@ -817,4 +819,187 @@ code {
 
 .dropdown.show .dropdown-selected::after {
     content: '\25B2'; /* Up arrow */
+}
+
+.support {
+    justify-content: space-between;
+    align-items: center;
+    width: clamp(2em, 2vw, max-content);
+    background: linear-gradient(45deg, var(--cozy-gray), var(--background));
+    margin: 1em 0;
+    padding: 0 1em;
+    border-radius: .35em;
+    display: flex;
+    height: 10em;
+    width: max-content;
+}
+
+.support-link {
+    background-color: var(--primary);
+    justify-content: space-between;
+    cursor: pointer;
+    align-items: center;
+    border-radius: .5em;
+    font-size: 1.3em;
+    color: white;
+    margin: 2em 0;
+    display: flex;
+    padding: .5em;
+    gap: .3em;
+    transition: filter .3s ease, padding .3s;
+}
+
+.support-link:hover {
+    filter: brightness(70%);
+    padding: .6em;
+}
+
+.kofi > img {
+    width: 32px;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    animation: kofiwiggle 3s infinite ease;
+}
+
+@keyframes kofiwiggle {
+    0%, 100% {
+        transform: rotate(0) scale(1);
+    }
+    60% {
+        transform: rotate(0) scale(1);
+    }
+    75% {
+        transform: rotate(0) scale(1.12);
+    }
+    80% {
+        transform: rotate(0) scale(1.1);
+    }
+    84% {
+        transform: rotate(-10deg) scale(1.1);
+    }
+    88% {
+        transform: rotate(10deg) scale(1.1);
+    }
+    92% {
+        transform: rotate(-10deg) scale(1.1);
+    }
+    96% {
+        transform: rotate(10deg) scale(1.1);
+    }
+}
+
+#kofiframe {
+    border-radius: 1em;
+    border: none; 
+    width: 20em;
+    height: 38em;
+    overflow: none;
+}
+
+.kofi-popup {
+    background: #00000093;
+    justify-content: center;
+    position: fixed;
+    display: none;
+    z-index: 9999;
+    top: 0;
+    width: 100dvw;
+    height: 100%;
+    align-items: center;
+    backdrop-filter: blur(10px);
+    gap: 50px;
+}
+
+.popup-container {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 1em;
+}
+
+.close {
+    position: relative;
+    padding: 16px;
+    cursor: pointer;
+    background-color: var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .2em;
+    align-self: flex-start;
+}
+
+.close::before {
+    content: '';
+    position: absolute;
+    width: 32px;
+    height: 4px;
+    transform: rotate(45deg);
+    background-color: white;    
+    border-radius: 1em;
+    padding: 0;
+    margin: 0;
+}
+
+.close::after {
+    content: '';
+    position: absolute;
+    width: 32px;
+    height: 4px;
+    transform: rotate(-45deg);
+    border-radius: 1em;
+    background-color: white;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+    height: max-content;
+}
+
+footer > * {
+    outline: 2px solid var(--gray-but-more-blue);
+}
+
+.creators {
+    display: flex;
+    gap: 2em;
+    align-items: center;
+    padding: 0 2em;
+    border-radius: .3em;
+    font-size: 1.2em;
+}
+
+.creator-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+    justify-content: center;
+    margin: 1.25em 0;
+}
+
+.creator {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: .1rem;
+    padding: .5em 1em;
+    background-color: var(--primary);
+    border-radius: .3em;
+    font-size: 1.1em;
+    font-weight: 600;
+    filter: grayscale(1);
+    transition: filter .4s ease;
+}
+
+.creator:last-child {
+    background-color: var(--orange);
+    color: var(--gray);
+}
+
+.creator:hover {
+    filter: grayscale(0);
 }
