--- a/styles/statify.css
+++ b/styles/statify.css
@@ -199,6 +199,17 @@ body {
     display: flex;
     height: 90vh;
     width: 100%;
+
+    --fade-start: 80%;
+
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) var(--fade-start), rgba(0,0,0,0));
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: bottom;
+    -webkit-mask-size: cover;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) var(--fade-start), rgba(0,0,0,0));
+    mask-repeat: no-repeat;
+    mask-position: bottom;
+    mask-size: cover;
 }
 
 .img-container > img {
